--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,14 @@ spring.application.name=demo
 # Puerto del servidor
 server.port=8083
 
-# Configuracion H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# Configuracion PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/veterinaria_db
+spring.datasource.username=postgres
+spring.datasource.password=alumnos
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuracion JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# Habilitar consola H2
-spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.format_sql=true
